<resources>
    <string name="app_name">Go Smart Les Magistra</string>
    <string name="go_smart">Go Smart</string>
    <string name="les_magistra">Les Magistra</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="please_enter_your">Please enter your registered Email Address</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="signup_student">Sign Up Student</string>
    <string name="signup_teacher">Sign Up Teacher</string>
    <string name="edit_profile_student">Edit Profile</string>
    <string name="edit_profile_teacher">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="private_order">Private Order</string>
    <string name="update_bank_information">Update Bank Information</string>

    <!-- action -->
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_need_help">Need help?</string>
    <string name="action_signup_student">Sign Up Student</string>
    <string name="action_signup_teacher">Sign Up Teacher</string>
    <string name="action_submit">Submit</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_update_bank">Update Bank</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_confirmation">Confirmation</string>
    <string name="action_evicende">Upload Evidence</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_request">Request</string>
    <string name="action_review">Review</string>
    <string name="action_set_done">Set Done</string>


    <!-- prompt -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="prompt_first_name">First Name*</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone_number">Phone Number*</string>
    <string name="prompt_address">Address*</string>
    <string name="prompt_title">Title*</string>
    <string name="prompt_current_password">Current Password*</string>
    <string name="prompt_new_password">New Password*</string>
    <string name="prompt_confirm_password">Confirm New Password*</string>
    <string name="prompt_izajah_number">Izazjah Number</string>
    <string name="prompt_graduated">Graduated</string>
    <string name="prompt_bio">Bio*</string>
    <string name="prompt_description">Description*</string>
    <string name="prompt_expected_cost">Expected Cost*</string>
    <string name="prompt_bank_name">Bank Name*</string>
    <string name="prompt_bank_account">Bank Account*</string>
    <string name="prompt_bank_branch">Bank Branch*</string>
    <string name="prompt_behalf_of">Account Holder*</string>
    <string name="prompt_school">School*</string>
    <string name="prompt_degree">Degree*</string>
    <string name="prompt_department">Department*</string>
    <string name="prompt_school_address">School Address*</string>
    <string name="prompt_search">Search</string>
    <string name="prompt_course_level">Course Level*</string>
    <string name="prompt_select_course_level">Select a Course Level</string>
    <string name="prompt_course">Course*</string>
    <string name="prompt_select_course">Select a Course</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_section">Section</string>
    <string name="prompt_on_at">On At</string>
    <string name="prompt_choose_section">Choose Section</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_bank_transfer_to">Transfer To</string>
    <string name="prompt_select_bank_transfer_to">Select Transfer To</string>
    <string name="prompt_message">Message*</string>
    <string name="prompt_taking_money">Taking Money*</string>
    <string name="prompt_rate">Rate 1-5*</string>
    <string name="prompt_review">Review*</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_request_honor">Request Honor is not more than </string>

    <string name="text_email">Email</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_address">Address</string>
    <string name="text_title">Title</string>
    <string name="text_izajah_number">Izajah Number</string>
    <string name="text_graduated">Graduated</string>
    <string name="text_bio">Bio</string>
    <string name="text_total">Total</string>
    <string name="text_total_updated_at">Total Updated At</string>

    <string name="term_and_condition">Term and Conditions</string>
    <string name="request_honor">Request Honor</string>
    <string name="aggree">Aggree</string>
    <string name="courses">Courses</string>
    <string name="section">Section</string>
    <string name="on_at">On At</string>
    <string name="check">Check</string>
    <string name="check_at">Check At</string>
    <string name="start_date">Start Date</string>
    <string name="finish">Finish</string>
    <string name="finished_at">Finished At</string>
    <string name="course">Course</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="end_date">End Date</string>
    <string name="time">Time</string>
    <string name="private_text">Private</string>
    <string name="similiar_course">Similiar Courses</string>
    <string name="teacher_availability">Teachers Available</string>
    <string name="request_failed_please_try_again">Request failed, please try again</string>
    <string name="course_details">Course Details</string>
    <string name="teacher_details">Teacher Details</string>
    <string name="fill_details">Fill Details</string>
    <string name="final_total">Final Total</string>
    <string name="bill_details">Bill Details</string>
    <string name="there_is_no_private_order">There is no private order</string>
    <string name="transfer_options">Bank Transfer Options</string>
    <string name="fill_confirmation">Fill Confirmation Form</string>
    <string name="notification">Notification</string>
    <string name="private_schedule">Schedule</string>
    <string name="order_history">Order Histories</string>
    <string name="private_order_history">Private Order Histories</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="money_collection_is_not_more_than">Money collection is not more than</string>
    <string name="status">Status</string>
    <string name="there_is_no_schedule">There is no Schedule for Today</string>
    <string name="there_is_no_private">There is no Private Active for Today</string>
    <string name="review_title">Review Performance</string>
    <string name="section_details">Section Details</string>
    <string name="private_details">Private Details</string>
    <string name="student_details">Student Details</string>
    <string name="student_on_details">Student On Details</string>
    <string name="teacher_on_details">Student On Details</string>
    <string name="code">Code</string>
    <string name="on_at_description">Section Review</string>
    <string name="form_finish_section">Section Finish Form</string>
    <string name="student_phone">Student Phone</string>
    <string name="teacher_phone">Teacher Phone</string>
    <string name="schedule">Schedule</string>
    <string name="section_done">Section is Done</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string-array name="title_arrays">
        <item>Diploma</item>
        <item>Sarjana</item>
        <item>Master</item>
        <item>Doctor</item>
    </string-array>

    <string-array name="sort_arrays">
        <item>Default</item>
        <item>Cheapest</item>
    </string-array>

</resources>
