<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar"
        android:id="@+id/appbar"
        app:elevation="@null">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.NoActionBar">

            <ImageButton
                android:id="@+id/action_left"
                style="@style/AppTheme.ButtonActionBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/title_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:text="@string/action_signup_teacher"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_medium_material" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhiteSmoke"
        android:gravity="center"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="@dimen/input_right"
            android:textSize="@dimen/textSmall"
            android:textColor="@color/colorBlackSecondary"
            android:text="@string/have_an_account"/>

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/action_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/action_signin"
            android:textSize="@dimen/textSmall"
            android:textColor="@color/colorBlack" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/bottombar"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sign_up_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                   <android.support.design.widget.TextInputLayout
                       android:id="@+id/input_layout_title"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight=".20"
                       android:layout_marginBottom="@dimen/input_bottom">

                       <AutoCompleteTextView
                           android:id="@+id/title"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="@string/prompt_title"
                           android:imeOptions="actionNext"
                           android:inputType="number"
                           android:maxLines="1"
                           android:nextFocusDown="@+id/first_name"
                           android:singleLine="true" />

                   </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_first"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:layout_marginBottom="@dimen/input_bottom"
                        android:layout_marginRight="@dimen/control_inset_material">

                        <AutoCompleteTextView
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_first_name"
                            android:inputType="textAutoComplete"
                            android:imeOptions="actionNext"
                            android:nextFocusRight="@+id/last_name"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_last"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:layout_marginBottom="@dimen/input_bottom"
                        android:layout_marginLeft="@dimen/control_inset_material">

                        <AutoCompleteTextView
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_last_name"
                            android:inputType="textAutoComplete"
                            android:imeOptions="actionNext"
                            android:nextFocusDown="@+id/date_of_birth"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/mobile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/email"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:inputType="text|textMultiLine"
                        android:gravity="top"
                        android:hint="@string/prompt_address"
                        android:imeOptions="actionDone"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/password"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_bottom">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_signin"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/action_signup"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fontInputBig"
                    android:background="@drawable/shape_rectanglebutton" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>